--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+inferno = "0.12.4"
+tempfile = "3.24.0"
