--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,5 +11,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+      - name: Cargo fmt
+        run: cargo fmt --check
+      - name: Cargo clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
       - name: Cargo test
-        run: cargo test
+        run: cargo test --all-targets --all-features
+      - name: Cargo doc
+        run: cargo doc --no-deps
