--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,2 @@
-[package]
-name = "engulf"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-clap = { version = "4.4", features = ["derive"] }
-anyhow = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-inferno = "0.12.4"
-tempfile = "3.24.0"
+[workspace]
+members = ["crates/engulf", "crates/engulf-cli", "crates/engulf-wasm"]
