--- a/crates/engulf-wasm/Cargo.toml
+++ b/crates/engulf-wasm/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib", "rlib"]
 anyhow = "1.0"
 engulf = { path = "../engulf" }
 wasm-bindgen = "0.2"
+getrandom = { version = "0.3", features = ["wasm_js"] }
